# api_tienda

./: .gitignore  Dockerfile  README.md  app_caja.py  app_clientes.py  app_predictions.py  leer_delta_table.py  main.py  pipline.ipynb  pyproject.toml  taildwind.config.mjs
.github/workflows/: wf_test_n_docker.yml
detalles_compras_delta/: .part-00000-38114d8a-ba58-457e-afc8-5cf37f9bff8f-c000.snappy.parquet.crc  .part-00001-650d0de2-7653-4f52-9f67-e6cbe7638382-c000.snappy.parquet.crc  .part-00003-4b80a2f8-c820-4cc2-9dd4-71df177d7c44-c000.snappy.parquet.crc  .part-00005-376ac772-81f4-4733-b9b8-3e0ab7bcf19e-c000.snappy.parquet.crc  .part-00006-91f56b1d-207e-445a-abb3-9b5ffc0f32e3-c000.snappy.parquet.crc  .part-00008-193a507e-6d36-4f21-82a7-508ac0db84ea-c000.snappy.parquet.crc  .part-00010-e44faf3f-408a-431d-a26e-976cac502699-c000.snappy.parquet.crc  .part-00011-2b1c0fe9-450c-4cd2-ac7d-e95395cb8eb3-c000.snappy.parquet.crc  part-00000-38114d8a-ba58-457e-afc8-5cf37f9bff8f-c000.snappy.parquet  part-00001-650d0de2-7653-4f52-9f67-e6cbe7638382-c000.snappy.parquet  part-00003-4b80a2f8-c820-4cc2-9dd4-71df177d7c44-c000.snappy.parquet  part-00005-376ac772-81f4-4733-b9b8-3e0ab7bcf19e-c000.snappy.parquet  part-00006-91f56b1d-207e-445a-abb3-9b5ffc0f32e3-c000.snappy.parquet  part-00008-193a507e-6d36-4f21-82a7-508ac0db84ea-c000.snappy.parquet  part-00010-e44faf3f-408a-431d-a26e-976cac502699-c000.snappy.parquet  part-00011-2b1c0fe9-450c-4cd2-ac7d-e95395cb8eb3-c000.snappy.parquet
forecast/: forecasting.csv
mysql/: tiendas_api.sql
tests/: test_imports.py
(+2 files in other folders)
